# accent_cards_API_module

./: .env  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yaml  logger_configuration.py  main.py  pyproject.toml
.github/workflows/: tests.yml  update_badges.yml
app/database_functions/: postgres_models.py  postgres_orm.py
migration/: README.md  env.py
migration/versions/: 6797f11ee9f5_initial_revision.py
src/: server.py
src/accent_cards/: server.py
src/core/: postgres_orm.py
src/core/redis/: config.py  dependencies.py
src/core/sql/: __init__.py  config.py  database.py  dependencies.py
src/modules/: __init__.py
src/modules/accent_cards/: README.md  __init__.py  meta.py  models.py  router.py  schemas.py
src/shared/: postgres_config.py  postgres_orm.py
test/: conftest.py  test_server_response.py
test/integration/: test_repositories.py  test_schemas.py
test/integration/core/: test_endpoints.py  test_redis.py  test_repositories.py  test_schemas.py
test/integration/modules/: test_endpoints_accent_cards.py
