[project]
name = "ege-cards-API"
version = "0.1.0"
description = "One of (and main) modules for EGE cards app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.10",
]

[tool.ruff]
target-version = "py314"
line-length = 120
extend-exclude = [ "migration/*.py", "migration/versions/*.py", "*.svg" ]

[tool.ruff.lint]
select = ["RUF", "E", "N", "F", "UP", "B", "SIM", "C4","I" ]
ignore = ["SIM103", "N805", "F841", "B008", "RUF003"]

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention="google"


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
filterwarnings = [
    "ignore::pytest.PytestRemovedIn9Warning",
    "ignore::sqlalchemy.exc.SAWarning",
]
